--- a/README.rdoc
+++ b/README.rdoc
@@ -1,5 +1,8 @@
-TERMINAR EDIT DEL ESTUDIANTE POR PRIMERA VEZ
-NEW_STUDENT EDIT
-
-
-REGISTRO DE EMPRESA
+-Generar Vistas de Registro de Estudiante y Empresa
+-Generar Vistas de Sesion de Estudiante, Empresa y Administrador
+-Crear Manejo de Sesiones
+-Probar Passwords encriptadas
+-Generar Controlador de Vacantes
+-Generar Vista de Vacantes dependiendo de la sesion
+-Generar Vista de una vacantes con sus metodos para generar aplicaciones y contactos
+-Generar Seccion de Correos
